# sysoft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lab1/: area_of_circle.c  area_of_circle.h  area_of_rectangle.c  area_of_rectangle.h  area_of_triangle.c  area_of_triangle.h  main.c  roman.c  roman.h
lab2/: Makefile  areaOfRectangle.h  areaProg  main.c
lab3/: c_exec.c  c_ls.c  c_lsl.c  c_sigint.c
lab4/: alarm.c  cron.c  orphan1.c  permissions.c
